# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("server") {
  deps = []
  if (is_mac) {
    deps += [ "//chrome/updater/server/mac" ]
  }
  if (is_win) {
    deps += [ "//chrome/updater/server/win" ]
  }
}
