# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(is_chromeos, "Telemetry Extension is Chrome OS only")
assert(!is_official_build,
       "Telemetry Extension is only built for unofficial builds")

static_library("telemetry_extension_ui") {
  sources = [
    "probe_service.cc",
    "probe_service.h",
    "telemetry_extension_ui.cc",
    "telemetry_extension_ui.h",
    "url_constants.cc",
    "url_constants.h",
  ]

  deps = [
    "//base",
    "//chromeos/components/telemetry_extension_ui/mojom",
    "//chromeos/constants",
    "//chromeos/resources:telemetry_extension_resources",
    "//chromeos/services/cros_healthd/public/cpp",
    "//chromeos/services/cros_healthd/public/mojom",
    "//content/public/browser",
    "//ui/webui",
  ]
}
