# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")

generate_jni("content_settings_jni_headers") {
  sources = [ "java/src/org/chromium/components/content_settings/ContentSettingsFeatureList.java" ]
}

android_library("java") {
  sources = [ "java/src/org/chromium/components/content_settings/ContentSettingsFeatureList.java" ]
  deps = [
    "//base:base_java",
    "//base:jni_java",
  ]
  annotation_processor_deps = [ "//base/android/jni_generator:jni_processor" ]
}

source_set("android") {
  sources = [ "content_settings_feature_list.cc" ]
  deps = [
    ":content_settings_jni_headers",
    "//base",
    "//components/content_settings/core/common",
  ]
}

android_library("content_settings_enums_java") {
  srcjar_deps = [ ":content_setting_javagen" ]
  deps = [ "//third_party/android_deps:androidx_annotation_annotation_java" ]
}

java_cpp_enum("content_setting_javagen") {
  sources = [
    "../core/common/content_settings.h",
    "../core/common/cookie_controls_enforcement.h",
    "../core/common/cookie_controls_status.h",
  ]
}
