# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")

android_library("java") {
  sources = [
    "java/src/org/chromium/components/favicon/FaviconFallbackGenerator.java",
  ]

  deps = [
    "//base:base_java",
    "//components/embedder_support/android:util_java",
    "//url:gurl_java",
  ]
}

android_library("javatests") {
  testonly = true

  sources = [ "java/src/org/chromium/components/favicon/FaviconFallbackGeneratorTest.java" ]
  deps = [
    ":java",
    "//base:base_java_test_support",
    "//third_party/android_support_test_runner:rules_java",
    "//third_party/android_support_test_runner:runner_java",
    "//third_party/junit",
  ]
}
